<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="pass_word">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="message">Type a Message</string>
    <string name="send_btn">SEND</string>
    <string name="input_msg">Hi</string>
    <string name="preference_file_name">Avengers Preferences</string>
    <string name="log_out">LOG OUT</string>
</resources>