<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/avnege_logo" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgTitle"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/myColor"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp"
        android:backgroundTint="@color/myColor" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@color/myColor"
        android:padding="6dp"
        android:text="@string/log_in"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:text="@string/forgot_password"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="6dp"
        android:text="@string/register_yourself"
        android:textSize="16sp" />

</RelativeLayout>