<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/tony_stark" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:text="Tony Stark"
                android:textColor="#2196f3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:text="tony@starkindustries.com"
                android:textColor="#311b92"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:text="+91 11155555"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCaptain"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/captain_america" />

            <TextView
                android:id="@+id/txtNameCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgCaptain"
                android:text="Steve Rogers"
                android:textColor="#2196f3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameCap"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgCaptain"
                android:text="steve@starkindustries.com"
                android:textColor="#311b92"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtNumCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailCap"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgCaptain"
                android:text="+91 11133333"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBlackP"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/black_panther" />

            <TextView
                android:id="@+id/txtNameBp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgBlackP"
                android:text="T'Challa"
                android:textColor="#2196f3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailBp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameBp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgBlackP"
                android:text="blackpanther@wakanda.com"
                android:textColor="#311b92"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtNumBp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailBp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgBlackP"
                android:text="+91 11144444"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgHulk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/hulk" />

            <TextView
                android:id="@+id/txtNameHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="Bruce Banner"
                android:textColor="#2196f3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="bruce@smash.com"
                android:textColor="#311b92"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtNumHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailHulk"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="+91 11177777"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgThor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/thor" />

            <TextView
                android:id="@+id/txtNameThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="Thor Odinson"
                android:textColor="#2196f3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="thor@smash.com"
                android:textColor="#311b92"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtNumThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailThor"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="+91 11188888"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgWid"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:src="@drawable/widow" />

            <TextView
                android:id="@+id/txtNameWid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgWid"
                android:text="Natasha Romanova"
                android:textColor="#2196f3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailWid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameWid"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgWid"
                android:text="natasha@smash.com"
                android:textColor="#311b92"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtNumWid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailWid"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgWid"
                android:text="+91 11122222"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etMsg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="150dp"
                android:backgroundTint="@color/myColor"
                android:hint="@string/message"
                android:inputType="text"
                android:maxLines="2" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="250dp"
                android:layout_marginRight="20dp"
                android:background="@color/myColor"
                android:text="@string/send_btn"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="150dp"
                android:background="@color/myColor"
                android:text="@string/log_out"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>